2015-03-17  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 0.04a.

2014-12-10  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.04.
	* doc/chopstx.texi (VERSION): 0.04.

	* board/*.h: Updated.

	* example-cdc/sys.c: Copied from example-led.

	* example-led/sys.c (clock_init, GPIO_USB): Follow the change of
	entry.c.
	(gpio_init): Use RCC_ENR_IOP_EN and RCC_RSTR_IOP_RST.
	(reset): Use ldr instead of mov.w and movt.

	* entry.c (GPIO_USB) [GPIO_USB_BASE]: Conditionally defined.

	* chopstx.c (preempt): Add ! for stm.
	(chx_exit): Make sure RETVAL is saved onto r8.
	(chopstx_usec_wait_var): Make sure USEC_P is saved onto r8.

2013-11-27  Niibe Yutaka  <gniibe@fsij.org>

	* board/board-stbee-mini.h: New.

	* entry.c (AFIO_MAPR_SWJ_CFG_DISABLE): New.

2013-11-26  Niibe Yutaka  <gniibe@fsij.org>

	* board/board-stbee.h: New.

	* rules.mk (OUTFILES) [ENABLE_OUTPUT_HEX]: Add hex generation.

2013-11-21  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/usb_stm32f103.c, example-cdc/usb_lld.h: Update from
	Gnuk.

2013-11-08  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.03.
	* doc/chopstx.texi (VERSION): 0.03.

	* chopstx.c (preempt): Disable interrupt.

2013-11-08  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.02.
	* doc/chopstx.texi (VERSION): 0.02.

	* example-cdc/usb_stm32f103.c: Updated from NeuG.

	* chopstx.c (CPU_EXCEPTION_PRIORITY_SYSTICK): Equals to
	CPU_EXCEPTION_PRIORITY_INTERRUPT.

2013-11-03  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.01.
	* doc/chopstx.texi (VERSION): 0.01.

	* chopstx.c (chx_clr_intr): New.
	(chopstx_intr_wait): Call chopstx.c.
	(chx_enable_intr): Let chx_clr_intr clear pending-bit.

2013-11-02  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/usb_lld.h, example-cdc/usb_stm32f103.c: Update from
	Gnuk.
	* example-cdc/usb-cdc.c (usb_cb_get_descriptor): Follow the
	change.

	* example-cdc/sys.c, example-led/sys.c: Update from Gnuk.

	* chopstx.c (CPU_EXCEPTION_PRIORITY_INTERRUPT)
	(CPU_EXCEPTION_PRIORITY_PENDSV): Change the value, so that